--- a/css/styles.css
+++ b/css/styles.css
@@ -201,7 +201,15 @@ img{
     display: none;}
 .link{
     max-width: 264px;
-}}
+}
+.header-container {
+    height: 70px;
+}
+.link.list{
+    margin-left: auto;
+    margin-right: auto;;
+}
+}
     
 
 @media only screen and (min-width:768px){
@@ -390,14 +398,21 @@ color: var(--Pressed-state);
     align-items:center;    
     justify-content:center;
 }
-
+@media only screen and (min-width:768px){
+.main-title{
+    padding: 122px 0;
+}
+}
+@media only screen and (min-width:1158px){
+    .main-title{
+        padding: 188px 0;
+    }}
 
 /* mobile style */
 .main-text {
     font-size: 36px;
     Line-height: 40px;
-    Line-height: 95%;
-    padding:112px  54px 72px 54px;
+    Line-height: 95%;   
     letter-spacing: 0.02em;
     color: var(--White-background);        
    
@@ -421,6 +436,15 @@ color: var(--Pressed-state);
     display: flex;
     flex-direction:column;
 }
+@media only screen and (max-width:767px){
+    .container-main{
+        padding: 112px 0;
+    }
+    .main-text {
+        margin-bottom: 72px;
+    
+
+}}
 
 .button {
     font-family: 'Roboto', sans-serif;   
@@ -434,7 +458,7 @@ color: var(--Pressed-state);
     height: 56px;
     border: none; 
     border-radius: 4px;
-    margin: 0 auto 112px;
+    margin: 0 auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
 
@@ -481,7 +505,7 @@ display: flex;
 .advantages-container{
     
     padding: 96px 0px;
-min-width: unset;  }
+    min-width: unset;  }
   
 
 .adventage-title {
@@ -507,24 +531,33 @@ min-width: unset;  }
     letter-spacing: 0.02em;
     color: var(--text-color);
 }
+@media only screen and (max-width:767px) {
+    .adventage-text {
+    text-align: left;
+
+    }
+    .main-logo{
+      justify-content: center;;
+
+    }}
 
 
 
 
 /* Tablet styles Section 1*/
-@media only screen and (min-width:767px) and (max-width:1157px){
+@media only screen and (min-width:768px) {
     .adventeges-item{
         display: none;}
-        .adventages-list-container{
-           
-            display: flex;
+        .adventages-list-container{           
+        display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
         column-gap: 24px;
         row-gap: 72px;
+        padding: 0;
         }   
         .advantages{
-        flex-basis: calc((100% - 3 * 24px) / 2);
+        flex-basis: calc((100% - 24px) / 2);
         
         }
 }
@@ -547,11 +580,19 @@ min-width: unset;  }
 /* Section 1 */
 
 .advantages-container{
-    text-align: center;
+    /* text-align: center; */
     padding: 120px 0 120px;
+    
     }
+    .list.adventages-list-container{
+        gap: 24px;
+        padding-left: 0;
+    }
+
+
+
 .advantages{
-    flex-basis: calc((100% - 3 * 24px) / 4);
+    flex-basis: calc((100% - 72px) / 4);
 }
 .adventage-title {
     font-weight: 500;
@@ -623,7 +664,7 @@ min-width: unset;  }
 /* Section 3 */
 .main-team {
     background: var(--Light);
-    padding: 120px 0;
+    padding: 96px 0;
     margin-left: auto;
     margin-right: auto;
     
@@ -687,6 +728,12 @@ min-width: unset;  }
     color: var(--Light);
     max-width: 264px;
 }
+@media only screen and (max-width:768px){
+    .small-text {
+        text-align: left;
+
+    }}
+
 .footer-container{
     padding:   96px 0;
     
@@ -959,16 +1006,18 @@ height: 40px;
     outline-offset:-2 px;
     padding-left: auto;
     padding-right: auto;
-    justify-content: center; 
-  
+    text-align: center;
+     
 }
 
-@media only screen and (min-width:767px){
+@media only screen and (min-width:768px) and (max-width:1157px) {
     .container-footer{
+    width:582px; 
     display: flex;    
     flex-wrap: wrap;
     flex-direction: row;
-    
+    justify-content: center; 
+  
     
 
 }}
@@ -987,33 +1036,25 @@ height: 40px;
 }
 
 
-
+@media only screen and (max-width:768px) {
 .webstudio-footer{
-    margin-right: 120px;
-    
+    /* margin-right: 120px;     */
     margin-right: auto;   
     margin-left: auto;
     padding-bottom: 72px;
-}
+}}
 @media only screen and (min-width:768px) and (max-width:1157px) {
     .webstudio-footer{
     text-align: justify;       
     display: block;
     flex-wrap: wrap;
-    margin: 0 ;
-    padding-right:24px;
+    margin: 0;    
     justify-content: center;        
 }
     .webstudio-footer.Social-media {
         
 }
 }
-
-
-
-   
-      
-
 .social-title-footer{
 font-weight: 500;
 font-size: 16px;
@@ -1034,7 +1075,7 @@ margin-bottom: 16px;
         
     }
     .Social-media{
-        /* margin-right: 80px; */
+        margin-right: 70px;
     }
     @media only screen and (max-width:767px){
     
@@ -1067,8 +1108,8 @@ margin-bottom: 16px;
      /* Subscribe */
     .Subscribe{     
      color: var(--White-background);
-     margin-left: auto; 
-     margin-right: auto;
+     /* margin-left: auto; 
+     margin-right: auto; */
         
        }
        @media only screen and (max-width:767px){
@@ -1102,6 +1143,7 @@ margin-bottom: 16px;
      display: flex;        
      justify-content: center;
      align-items: center; */
+     
      text-align: center; 
      width: 165px;
      height: 40px;
@@ -1133,11 +1175,13 @@ margin-bottom: 16px;
             border-radius: 4px;
             border: 1px solid #FFFFFF;
             margin-bottom: 16px;
+            padding-left: 16px;
         }
          .subscribe-icon{
             width: 24px;
             height: 20px;          
             fill: var(--Modal-background);
+            
 
          }
          @media only screen and (min-width:768px){
@@ -1161,6 +1205,7 @@ margin-bottom: 16px;
                     position: relative;
                     display: flex;        
                     justify-content: center;
+                    text-align: center;
                     align-items: center;          
                     gap: 16px;
                     width: 165px;
@@ -1177,6 +1222,7 @@ margin-bottom: 16px;
                     
                                
                       }}
+
 
             
 
@@ -1412,11 +1458,7 @@ margin-bottom: 16px;
            .modal-btn-close {
             position: absolute;
             top: 24px;
-            right: 24px;
-            
-            
-
-
+            right: 24px;    
             display: block;
             margin-top: auto;
             width: 24px;
@@ -1426,6 +1468,7 @@ margin-bottom: 16px;
             border:none;
             cursor: pointer;
             color:var(--Dark);
+           
             
            }
            .modal-btn-close:hover,
@@ -1485,14 +1528,15 @@ margin-bottom: 16px;
             left: 0;
             display: flex;
             flex-direction: column;
+            padding: 80px 40px 40px 40px;
             width: 100%;
             height: 100%;
             padding: 80px 0 40;
             background-color: var(--White-background);
-            z-index: 999;
-          
+            z-index: 999;          
             transform: translateX(100%);
             transition: transform 250ms ease-in-out;
+            justify-content: space-between;
           }
           
           .menu-container.is-open {
@@ -1510,7 +1554,7 @@ margin-bottom: 16px;
             display:flex;
             flex-direction: column;
             padding: 0;
-            margin-bottom: auto;
+            margin-left:0;             
             gap:40px;
             list-style: none;
             color: var(--Dark);
@@ -1541,23 +1585,33 @@ margin-bottom: 16px;
           .mobile-contacts{
             display:flex;
             flex-direction: column;
+            padding: 0;
+            margin-left: 0;
             margin-bottom: 48px;
+            gap: 40px;
+            margin-top: auto;
 
           }
-          .mobile-socials{
+          .mobile-socials.list.link{
             display: flex;
-            gap: 30px;
+           
+            gap: 56px;
+            padding: 0;            
+            max-width: 100%;
                        }
 
           .mobile-tel{
             font-size: 36px;
-            line-height: 40px;            
-            letter-spacing: 0.02em;
+            font-weight: 700;
+            line-height: 40px; 
+            text-decoration: none;
             text-transform: capitalize;    
             color: var(--Primary-Brand);
             margin-bottom: 40px;
             
-
+          }
+          .mobile-menu-tel{
+            margin-top: 0;
           }
           .mobile-email{
             font-weight: 500;
@@ -1566,6 +1620,8 @@ margin-bottom: 16px;
             letter-spacing: 0.02em;
             color: #434455;
             padding: 0px 35px 40px 0px;
+            margin-top: 40px;
+            text-decoration: none;         
           }
           .modal-btn-close-mobile {
             position: absolute;                        
@@ -1581,6 +1637,7 @@ margin-bottom: 16px;
            }
            /* Section 4 */
            .logo-company{
+            row-gap: 72px;
             gap: 24px;
             padding-left: 0;
             justify-content: center;
@@ -1588,7 +1645,8 @@ margin-bottom: 16px;
            }
            @media only screen and (max-width:767px) {
            .logo-company {
-            gap: 15px;
+            gap: 16px;
+            row-gap: 72px;
             padding-left: 0;
             
         }
