--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ img{
 }
 @media only screen and (min-width: 768px){
 .link.list{
-    row-gap: 64px;
+    row-gap: 72px;
     column-gap: 24px;
     justify-content: center;      
     flex-wrap: wrap;
@@ -321,7 +321,9 @@ img{
     .link.logo-web.logo-footer.link-footer{
         color: var(--Primary-Brand);
     }
-     
+    .link.logo-web.logo.main-logo {
+        color: var(--Primary-Brand);
+    }
 
         
     @media only screen and (min-width:1158px){
@@ -576,8 +578,7 @@ display: flex;
         }   
         .advantages{
         flex-basis: calc((100% - 24px) / 2);
-        
-        }
+            }
 }
 
 
@@ -647,12 +648,7 @@ display: flex;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--Dark);    
-    display: inline-block;}
-
-/* Section 2 */
-/* Mobile Sectiion 2 */
-/* @media only screen and (max-width:428px){
-    
+    display: inline-block;}   
 
 
 /* Tablet section 2 */
@@ -703,6 +699,18 @@ display: flex;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+@media only screen and (min-width:1158px){
+    .team-list-background{
+        width: calc(( 100% - 24px *3 )/4);
+
+    }}
+    @media only screen and (min-width:768px) and (max-width:1157px) {
+        .team-list-background{
+            width: calc(( 100% - 24px *3 )/2);
+    
+        }}
+
 
 .team-name {
     font-weight: 500;
@@ -944,15 +952,7 @@ display: flex;
 
 
 
-/* @media only screen and (max-width:767px){
-    .overlay{
-        max-width: 428px;
-        margin-left: auto;
-        margin-right: auto;
-        outline: 1px solid rgb(19, 17, 17);}}         */
-        /* background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover; */
+
 
 /* Socials icons */
 .socials{
@@ -1045,9 +1045,7 @@ height: 40px;
     border-color: #404bbf;
     color: #404bbf; 
 }
-/* .icon-customers{
-    
-} */
+
 .customers-icons:hover,
 .customers-icons:focus{
    fill: var(--Pressed-state)}
@@ -1073,7 +1071,7 @@ height: 40px;
     flex-direction: row;
     justify-content: flex-start;
     gap: 72px 24px;
-    padding-left: 0; 
+    
   
     
 
@@ -1083,8 +1081,7 @@ height: 40px;
 @media only screen and (min-width:1158px){
     .container-footer{ 
         display: flex;
-        flex-direction: row;
-        /* align-items: baseline; */
+        flex-direction: row;        
         width:1158px;          
         outline-offset:-2 px;
         padding-left: 15px;
@@ -1100,8 +1097,7 @@ height: 40px;
 
 
 @media only screen and (max-width:768px) {
-.webstudio-footer{
-    /* margin-right: 120px;     */
+.webstudio-footer{   
     margin-right: auto;   
     margin-left: auto;
     padding-bottom: 72px;
@@ -1141,9 +1137,7 @@ margin-bottom: 16px;
         height: 40px;
         
     }
-    .Social-media{
-        margin-right: 70px;
-    }
+  
     @media only screen and (max-width:767px){
     
         .Social-media{
@@ -1695,10 +1689,10 @@ margin-bottom: 16px;
           }
           .modal-btn-close-mobile {
             position: absolute;                        
-            width: 24px;
-            height: 24px; 
+            width: 8px;
+            height: 8px; 
             background-color: var(--Accent);
-                       
+            fill: var(--Dark);                       
             border-radius: 50%;            
             cursor: pointer;
             color:var(--Dark);
